--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.9.2)
 project(IniIO)
 
 set(CMAKE_CXX_STANDARD 17)
+
+file(MAKE_DIRECTORY bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
 
 find_package(GTest REQUIRED)
