--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,11 @@ before_install:
 
 install:
   - mkdir ~/googletest
-  - pushd ~/googletest
+#  - pushd ~/googletest
   - wget -qO - https://github.com/google/googletest/archive/release-1.8.0.tar.gz | tar -xz
   - cmake -D CMAKE_INSTALL_PREFIX:PATH=$HOME/googletest -D CMAKE_BUILD_TYPE=Release googletest-release-1.8.0
   - make install
-  - popd
+#  - popd
 
 script:
 #  - mkdir build
