--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-8
+            - gcc-8
       env:
          - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
 
