--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ matrix:
       env:
          - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
 
+before_install:
+    - eval "${MATRIX_EVAL}"
+
 install:
   - mkdir ~/googletest
   - pushd ~/googletest
