--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,10 @@ matrix:
          - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
 
 before_install:
-    - eval "${MATRIX_EVAL}"
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60 --slave /usr/bin/g++ g++ /usr/bin/g++-8
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 40 --slave /usr/bin/g++ g++ /usr/bin/g++-8
+  - sudo update-alternatives --config gcc
+  - eval "${MATRIX_EVAL}"
 
 install:
   - mkdir ~/googletest
