--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,13 @@ install:
   - mkdir ~/googletest
   - pushd ~/googletest
   - wget -qO - https://github.com/google/googletest/archive/release-1.8.0.tar.gz | tar -xz
-  - cmake -D CMAKE_INSTALL_PREFIX:PATH=$HOME/googletest -D CMAKE_BUILD_TYPE=Release googletest-release-1.8.0
-  - make install
+  - cd googletest-release-1.8.0/
+  - mkdir gtest_build
+  - cd gtest_build
+  - cmake ../
+  - make
+  - cp -r ../include/gtest /usr/local/include
+  - cp lib*.a /usr/local/lib
   - popd
 
 script:
@@ -21,7 +26,7 @@ script:
   - export CXX=g++-7
   - mkdir build
   - cd build
-  - cmake -D GTEST_ROOT:PATH=$HOME/googletest ..
+  - cmake ../
   - make
   - make test
 
